# CarRental

CarService/: dist.env  docker-compose.yml  pyproject.toml
CarService/app/api/: schemas.py  services.py
CarService/app/car_app/: repository.py
CarService/app/core/: config.py  database.py  enums.py  exceptions.py
CarService/app/internal_gateway/: stations.py
CarService/app/models/: cars.py
CarService/migrations/versions/: 03a7726b4d93_create_tables.py  b6f084f6ccac_create_tables.py
CarService/tests/: conftest.py  data.py  dependencies.py
CarService/tests/api/: test_cars.py
CarService/tests/mocks/: s3.py
GeoService/: docker-compose.yml  pyproject.toml
GeoService/app/: main.py
GeoService/app/api/: routes.py  schemas.py  services.py
GeoService/app/core/: config.py  enums.py  exceptions.py
GeoService/app/storage/: redis_client.py
GeoService/tests/: conftest.py
GeoService/tests/api/: test_stations.py
OrderService/: pyproject.toml
OrderService/app/api/: services.py
OrderService/app/core/: enums.py
OrderService/app/internal_gateway/: cars.py
UserService/: pyproject.toml
UserService/app/: main.py
UserService/app/api/: config.py  mailer.py
UserService/app/api/schemas/: auth.py  users.py
UserService/app/api/services/: mail.py  password.py  users.py
UserService/app/core/: config.py
UserService/app/storage/: dynamodb.py
UserService/tests/: conftest.py  data.py  models.yaml
UserService/tests/routes/: test_auth.py  test_mail.py  test_registration.py  test_user.py
